[project]
name = "sigie"
version = "0.0.1"
description = "SIstema de Gestión Inteligente de Enlaces"
authors = [
    {name = "Pablo Gómez Cruañes",email = "pablo541@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"


[tool.black]
line-length = 120
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
